# api/controllers/login.js
@@ -7,6 +7,7 @@ module.exports = {
 function loginPost(req, res, next){
     var role = req.swagger.params.role.value;
     var username = req.body.username;
+    var correo = req.body.correo;
     var password = req.body.password;
   
     if (role != "user" && role != "admin" && role != "israel") {
@@ -15,7 +16,18 @@ function loginPost(req, res, next){
       return res.end(JSON.stringify(response));
     }
   
-    if (username == "username" && password == "password" && role) {
+    // if (username == "username" && password == "password" && role) {
+    //   var tokenString = auth.issueToken(username, role);
+    //   var response = { token: tokenString };
+    //   res.writeHead(200, { "Content-Type": "application/json" });
+    //   return res.end(JSON.stringify(response));
+    // } else {
+    //   var response = { message: "Error: Credentials incorrect" };
+    //   res.writeHead(403, { "Content-Type": "application/json" });
+    //   return res.end(JSON.stringify(response));
+    // }
+
+    if (correo == "hola@admin.cl" && password == "password" && role) {
       var tokenString = auth.issueToken(username, role);
       var response = { token: tokenString };
       res.writeHead(200, { "Content-Type": "application/json" });
